deploy: c3ad410e8417bd0cf13c0efdb8d71fbd46aa0208

--- a/coverage.html
+++ b/coverage.html
@@ -2002,76 +2002,76 @@
                 <span class="coverage-count">(1/4)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./injectables/DeviceInfoImpl.html">lib/src/modules/device/src/device-info.impl.ts</a>
             </td>
             <td>injectable</td>
             <td>DeviceInfoImpl</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+            <td align="right" data-sort="60">
+                <span class="coverage-percent">60 %</span>
+                <span class="coverage-count">(3/5)</span>
             </td>
         </tr>
-        <tr class="low">
-            <td>
-                <!-- miscellaneous -->
-                <a href="./interfaces/Device.html">lib/src/modules/device/src/device.constants.ts</a>
-            </td>
-            <td>interface</td>
-            <td>Device</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
-            </td>
-        </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./miscellaneous/variables.html#DEVICE">lib/src/modules/device/src/device.constants.ts</a>
             </td>
             <td>variable</td>
             <td>DEVICE</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="medium">
+            <td>
+                <!-- miscellaneous -->
+                <a href="./interfaces/Device.html">lib/src/modules/device/src/device.types.ts</a>
+            </td>
+            <td>interface</td>
+            <td>Device</td>
+            <td align="right" data-sort="33">
+                <span class="coverage-percent">33 %</span>
+                <span class="coverage-count">(1/3)</span>
+            </td>
+        </tr>
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./directives/PreventDefaultDirective.html">lib/src/modules/events/src/prevent-default.directive.ts</a>
             </td>
             <td>directive</td>
             <td>PreventDefaultDirective</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(3/3)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./directives/StopPropagationDirective.html">lib/src/modules/events/src/stop-propagation.directive.ts</a>
             </td>
             <td>directive</td>
             <td>StopPropagationDirective</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/3)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(3/3)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./pipes/FileSizePipe.html">lib/src/modules/file/src/file-size.pipe.ts</a>
             </td>
             <td>pipe</td>
             <td>FileSizePipe</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
         <tr class="low">
@@ -2081,9 +2081,9 @@
             </td>
             <td>interface</td>
             <td>AudioFileMetadata</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/16)</span>
+            <td align="right" data-sort="6">
+                <span class="coverage-percent">6 %</span>
+                <span class="coverage-count">(1/16)</span>
             </td>
         </tr>
         <tr class="low">
@@ -2093,9 +2093,9 @@
             </td>
             <td>interface</td>
             <td>ExifFileMetadata</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/48)</span>
+            <td align="right" data-sort="2">
+                <span class="coverage-percent">2 %</span>
+                <span class="coverage-count">(1/48)</span>
             </td>
         </tr>
         <tr class="low">
@@ -2105,9 +2105,9 @@
             </td>
             <td>interface</td>
             <td>File</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/11)</span>
+            <td align="right" data-sort="9">
+                <span class="coverage-percent">9 %</span>
+                <span class="coverage-count">(1/11)</span>
             </td>
         </tr>
         <tr class="low">
@@ -2117,9 +2117,9 @@
             </td>
             <td>interface</td>
             <td>FileMetadata</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/11)</span>
+            <td align="right" data-sort="9">
+                <span class="coverage-percent">9 %</span>
+                <span class="coverage-count">(1/11)</span>
             </td>
         </tr>
         <tr class="low">
@@ -2129,9 +2129,9 @@
             </td>
             <td>interface</td>
             <td>GpsFileMetadata</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+            <td align="right" data-sort="20">
+                <span class="coverage-percent">20 %</span>
+                <span class="coverage-count">(1/5)</span>
             </td>
         </tr>
         <tr class="low">
@@ -2141,9 +2141,9 @@
             </td>
             <td>interface</td>
             <td>IccFileMetadata</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/16)</span>
+            <td align="right" data-sort="6">
+                <span class="coverage-percent">6 %</span>
+                <span class="coverage-count">(1/16)</span>
             </td>
         </tr>
         <tr class="low">
@@ -2153,9 +2153,9 @@
             </td>
             <td>interface</td>
             <td>ImageFileMetadata</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/13)</span>
+            <td align="right" data-sort="7">
+                <span class="coverage-percent">7 %</span>
+                <span class="coverage-count">(1/13)</span>
             </td>
         </tr>
         <tr class="low">
@@ -2165,33 +2165,33 @@
             </td>
             <td>interface</td>
             <td>VideoFileMetadata</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/14)</span>
+            <td align="right" data-sort="7">
+                <span class="coverage-percent">7 %</span>
+                <span class="coverage-count">(1/14)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/FileInputComponent.html">lib/src/modules/file/src/input/file-input.component.ts</a>
             </td>
             <td>component</td>
             <td>FileInputComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/32)</span>
+            <td align="right" data-sort="62">
+                <span class="coverage-percent">62 %</span>
+                <span class="coverage-count">(20/32)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./miscellaneous/variables.html#AVAIL_LANGS">lib/src/modules/locale/src/locale.constants.ts</a>
             </td>
             <td>variable</td>
             <td>AVAIL_LANGS</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
         <tr class="low">
@@ -2201,9 +2201,9 @@
             </td>
             <td>interface</td>
             <td>Language</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+            <td align="right" data-sort="20">
+                <span class="coverage-percent">20 %</span>
+                <span class="coverage-count">(1/5)</span>
             </td>
         </tr>
         <tr class="low">
@@ -2213,9 +2213,9 @@
             </td>
             <td>interface</td>
             <td>LocalizedMedia</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+            <td align="right" data-sort="20">
+                <span class="coverage-percent">20 %</span>
+                <span class="coverage-count">(1/5)</span>
             </td>
         </tr>
         <tr class="low">
@@ -2225,45 +2225,45 @@
             </td>
             <td>interface</td>
             <td>LocalizedString</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/5)</span>
+            <td align="right" data-sort="20">
+                <span class="coverage-percent">20 %</span>
+                <span class="coverage-count">(1/5)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="very-good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./pipes/LocalizePipe.html">lib/src/modules/locale/src/localize.pipe.ts</a>
             </td>
             <td>pipe</td>
             <td>LocalizePipe</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/1)</span>
+            <td align="right" data-sort="100">
+                <span class="coverage-percent">100 %</span>
+                <span class="coverage-count">(1/1)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/LocalizeMediaInputComponent.html">lib/src/modules/locale/src/media-input/localize-media-input.component.ts</a>
             </td>
             <td>component</td>
             <td>LocalizeMediaInputComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/22)</span>
+            <td align="right" data-sort="59">
+                <span class="coverage-percent">59 %</span>
+                <span class="coverage-count">(13/22)</span>
             </td>
         </tr>
-        <tr class="low">
+        <tr class="good">
             <td>
                 <!-- miscellaneous -->
                 <a href="./components/LocalizeStringInputComponent.html">lib/src/modules/locale/src/string-input/localize-string-input.component.ts</a>
             </td>
             <td>component</td>
             <td>LocalizeStringInputComponent</td>
-            <td align="right" data-sort="0">
-                <span class="coverage-percent">0 %</span>
-                <span class="coverage-count">(0/20)</span>
+            <td align="right" data-sort="55">
+                <span class="coverage-percent">55 %</span>
+                <span class="coverage-count">(11/20)</span>
             </td>
         </tr>
         <tr class="low">
