--- a/interfaces/AudioFileMetadata.html
+++ b/interfaces/AudioFileMetadata.html
@@ -126,6 +126,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Interface representing audio file metadata.</p>
+
+            </p>
 
 
         <section data-compodoc="block-index">
@@ -743,6 +750,9 @@
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Media} from &quot;../../media&quot;;
 
+/**
+ * Interface representing a file.
+ */
 export interface File {
   id: number;
   code: string;
@@ -756,6 +766,9 @@ export interface File {
   tsCreated: Date;
 }
 
+/**
+ * Interface representing file metadata.
+ */
 export interface FileMetadata {
   id: number;
   mime: string;
@@ -769,6 +782,9 @@ export interface FileMetadata {
   video: VideoFileMetadata;
 }
 
+/**
+ * Interface representing image file metadata.
+ */
 export interface ImageFileMetadata {
   id: number;
   bps: number;
@@ -784,6 +800,9 @@ export interface ImageFileMetadata {
   interlace: string;
 }
 
+/**
+ * Interface representing ICC file metadata.
+ */
 export interface IccFileMetadata {
   id: number;
   profileVersion: string;
@@ -802,6 +821,9 @@ export interface IccFileMetadata {
   iccCopyright: string;
 }
 
+/**
+ * Interface representing EXIF file metadata.
+ */
 export interface ExifFileMetadata {
   id: number;
   make: string;
@@ -852,6 +874,9 @@ export interface ExifFileMetadata {
   interoperabilityVersion: string;
 }
 
+/**
+ * Interface representing GPS file metadata.
+ */
 export interface GpsFileMetadata {
   id: number;
   latitude: number;
@@ -859,6 +884,9 @@ export interface GpsFileMetadata {
   altitude: number;
 }
 
+/**
+ * Interface representing video file metadata.
+ */
 export interface VideoFileMetadata {
   id: number;
   codec: string;
@@ -875,6 +903,9 @@ export interface VideoFileMetadata {
   rotate: string;
 }
 
+/**
+ * Interface representing audio file metadata.
+ */
 export interface AudioFileMetadata {
   id: number;
   container: string;
