--- a/miscellaneous/variables.html
+++ b/miscellaneous/variables.html
@@ -380,6 +380,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Injection token for available language codes.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
@@ -403,6 +409,12 @@
                     </td>
                 </tr>
 
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-description"><p>Injection token for the current device info.</p>
+</div>
+                </td>
+            </tr>
 
         </tbody>
     </table>
