--- a/interfaces/Device.html
+++ b/interfaces/Device.html
@@ -122,10 +122,17 @@
             <h3>File</h3>
         </p>
         <p class="comment">
-            <code>lib/src/modules/device/src/device.constants.ts</code>
+            <code>lib/src/modules/device/src/device.types.ts</code>
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Interface representing device information.</p>
+
+            </p>
 
 
         <section data-compodoc="block-index">
@@ -234,14 +241,10 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {InjectionToken} from &quot;@angular/core&quot;;
-
-export interface Device {
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">export interface Device {
   isDesktop: boolean;
   isTablet: boolean;
 }
-
-export const DEVICE &#x3D; new InjectionToken&lt;Device&gt;(&quot;Current device info&quot;);
 </code></pre>
     </div>
 </div>
