--- a/interfaces/ExifFileMetadata.html
+++ b/interfaces/ExifFileMetadata.html
@@ -126,6 +126,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Interface representing EXIF file metadata.</p>
+
+            </p>
 
 
         <section data-compodoc="block-index">
@@ -1991,6 +1998,9 @@
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Media} from &quot;../../media&quot;;
 
+/**
+ * Interface representing a file.
+ */
 export interface File {
   id: number;
   code: string;
@@ -2004,6 +2014,9 @@ export interface File {
   tsCreated: Date;
 }
 
+/**
+ * Interface representing file metadata.
+ */
 export interface FileMetadata {
   id: number;
   mime: string;
@@ -2017,6 +2030,9 @@ export interface FileMetadata {
   video: VideoFileMetadata;
 }
 
+/**
+ * Interface representing image file metadata.
+ */
 export interface ImageFileMetadata {
   id: number;
   bps: number;
@@ -2032,6 +2048,9 @@ export interface ImageFileMetadata {
   interlace: string;
 }
 
+/**
+ * Interface representing ICC file metadata.
+ */
 export interface IccFileMetadata {
   id: number;
   profileVersion: string;
@@ -2050,6 +2069,9 @@ export interface IccFileMetadata {
   iccCopyright: string;
 }
 
+/**
+ * Interface representing EXIF file metadata.
+ */
 export interface ExifFileMetadata {
   id: number;
   make: string;
@@ -2100,6 +2122,9 @@ export interface ExifFileMetadata {
   interoperabilityVersion: string;
 }
 
+/**
+ * Interface representing GPS file metadata.
+ */
 export interface GpsFileMetadata {
   id: number;
   latitude: number;
@@ -2107,6 +2132,9 @@ export interface GpsFileMetadata {
   altitude: number;
 }
 
+/**
+ * Interface representing video file metadata.
+ */
 export interface VideoFileMetadata {
   id: number;
   codec: string;
@@ -2123,6 +2151,9 @@ export interface VideoFileMetadata {
   rotate: string;
 }
 
+/**
+ * Interface representing audio file metadata.
+ */
 export interface AudioFileMetadata {
   id: number;
   container: string;
