--- a/interfaces/GpsFileMetadata.html
+++ b/interfaces/GpsFileMetadata.html
@@ -126,6 +126,13 @@
         </p>
 
 
+            <p class="comment">
+                <h3>Description</h3>
+            </p>
+            <p class="comment">
+                <p>Interface representing GPS file metadata.</p>
+
+            </p>
 
 
         <section data-compodoc="block-index">
@@ -314,6 +321,9 @@
     <div class="tab-pane fade  tab-source-code" id="source">
         <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import {Media} from &quot;../../media&quot;;
 
+/**
+ * Interface representing a file.
+ */
 export interface File {
   id: number;
   code: string;
@@ -327,6 +337,9 @@ export interface File {
   tsCreated: Date;
 }
 
+/**
+ * Interface representing file metadata.
+ */
 export interface FileMetadata {
   id: number;
   mime: string;
@@ -340,6 +353,9 @@ export interface FileMetadata {
   video: VideoFileMetadata;
 }
 
+/**
+ * Interface representing image file metadata.
+ */
 export interface ImageFileMetadata {
   id: number;
   bps: number;
@@ -355,6 +371,9 @@ export interface ImageFileMetadata {
   interlace: string;
 }
 
+/**
+ * Interface representing ICC file metadata.
+ */
 export interface IccFileMetadata {
   id: number;
   profileVersion: string;
@@ -373,6 +392,9 @@ export interface IccFileMetadata {
   iccCopyright: string;
 }
 
+/**
+ * Interface representing EXIF file metadata.
+ */
 export interface ExifFileMetadata {
   id: number;
   make: string;
@@ -423,6 +445,9 @@ export interface ExifFileMetadata {
   interoperabilityVersion: string;
 }
 
+/**
+ * Interface representing GPS file metadata.
+ */
 export interface GpsFileMetadata {
   id: number;
   latitude: number;
@@ -430,6 +455,9 @@ export interface GpsFileMetadata {
   altitude: number;
 }
 
+/**
+ * Interface representing video file metadata.
+ */
 export interface VideoFileMetadata {
   id: number;
   codec: string;
@@ -446,6 +474,9 @@ export interface VideoFileMetadata {
   rotate: string;
 }
 
+/**
+ * Interface representing audio file metadata.
+ */
 export interface AudioFileMetadata {
   id: number;
   container: string;
